<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address">Address: %1$s</string>
    <string name="api_error">Could not connect to API</string>
    <string name="app_name">EatSafe</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="code_100">Restaurant operational/permit issues</string>
    <string name="code_200">Food safety issues</string>
    <string name="code_300">Equipment cleanliness</string>
    <string name="code_400">Employee cleanliness</string>
    <string name="code_500">Inadequate employee training</string>
    <string name="crit_issues">Critical issues found: %1$d</string>
    <string name="critical_issues_found">Critical issues found: %1$d</string>
    <string name="date">Inspection date: %1$s</string>
    <string name="debug_lock_status" translatable="false">Debug lock status</string>
    <string name="default_address" translatable="false">Address</string>
    <string name="default_date" translatable="false">November 10th, 2020</string>
    <string name="default_num_issues" translatable="false">Found 3 issues</string>
    <string name="desc_hazard_icon" translatable="false">Hazard Icon</string>
    <string name="desc_recycler_thumbnail" translatable="false">Recycler Thumbnail</string>
    <string name="description" translatable="false">description</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_update">Update</string>
    <string name="eat_safe" translatable="false">Eat Safe</string>
    <string name="empty_string" translatable="false" />
    <string name="found">Found\u0020</string>
    <string name="found_num_issues">Found %s issues</string>
    <string name="hazardLevelDisplay">Hazard level: %1$s</string>
    <string name="hazard_level">Hazard level: %1$s</string>
    <string name="hazard_level_high">High Hazard</string>
    <string name="hazard_level_low">Low Hazard</string>
    <string name="hazard_level_medium">Medium Hazard</string>
    <string name="inspected_on">Inspected on:\u0020</string>
    <string name="inspectionDateDisplay">Date: %1$s</string>
    <string name="inspectionTypeDisplay">Inspection type: %1$s</string>
    <string name="inspection_details_title">Inspection Details</string>
    <string name="issues">\u0020issues</string>
    <string name="last_inspected_on">Last inspected on %s</string>
    <string name="latitude"> Latitude:\n%1$s</string>
    <string name="longitude"> Longitude:\n%1$s</string>
    <string name="mcdonald_s" translatable="false">McDonald\'s</string>
    <string name="move_to_surrey" translatable="false">Move To Surrey</string>
    <string name="name">Name</string>
    <string name="no">no</string>
    <string name="no_inspection">No inspections found</string>
    <string name="no_inspections_found">No inspections found</string>
    <string name="non_crit_issues">Non-critical issues found: %1$d</string>
    <string name="non_critical_issues_found">Non-critical issues found: %1$d</string>
    <string name="restaurant_days">\u0020days</string>
    <string name="restaurant_details_title">Restaurant Details</string>
    <string name="return_to_map">Return to map</string>
    <string name="show_list">Show all restaurants</string>
    <string name="string_addressTV" translatable="false">address</string>
    <string name="string_inspectionHazardLevel">Overall Hazard level: %1$s</string>
    <string name="string_item_crit" translatable="false">crit</string>
    <string name="string_item_date" translatable="false">date</string>
    <string name="string_item_noncrit" translatable="false">noncrit</string>
    <string name="string_latitudeTV" translatable="false">latitude</string>
    <string name="string_levelTV" translatable="false">level</string>
    <string name="string_longitudeTV" translatable="false">longitude</string>
    <string name="string_resNameTV" translatable="false">restaurant</string>
    <string name="string_textViewInspectionDetails" translatable="false">TextView</string>
    <string name="three" translatable="false">3</string>
    <string name="update_available">Update available</string>
    <string name="update_message">An updated version of the inspection data is available. Do you want to update now?</string>
    <string name="updating">Updating:</string>
    <string name="violation_detail">%1$d - %2$s</string>
    <string name="welcome">Welcome To EatSafe</string>
    <string name="hazard_rating_low">Low</string>
    <string name="hazard_rating_medium">Medium</string>
    <string name="hazard_rating_high">High</string>
    <string name="hazard_rating_all">All</string>
    <string name="routine_inspection">Routine</string>
    <string name="follow_up_inspection">Follow-Up</string>
    <string name="menu_search">Search</string>
    <string name="apply_search">Apply</string>
    <string name="menu_filter">Filter</string>
    <string name="favourite">Favourite restaurant:</string>
    <string name="splash_screen_image" translatable="false">Splash screen image</string>
    <string name="new_inspections_for_your_favourite_restaurants">New inspections for your favourite restaurants:</string>
    <string name="empty_hint" translatable="false">0</string>
    <string name="total_crit_vio" translatable="false">violations</string>
    <string name="hazard_desc">Hazard</string>
    <string name="show_only_favorites">Show only favorite</string>
    <string name="clear_all">Clear All</string>
    <string name="search_options">Search options</string>
    <string name="server_timed_out">Server timed out</string>
    <string name="pizza">pizza</string>
    <string name="number_of_critical_condition" translatable="false">Number of critical condition</string>
    <string name="favorite_option" translatable="false">Favorite Option</string>
    <string name="hazardlevel" translatable="false">HazardLevel</string>
    <string name="less_than">Less than</string>
    <string name="greater_than">Greater than</string>
    <string-array name="hazard_levels_array">
        <item>@string/hazard_rating_low</item>
        <item>@string/hazard_rating_medium</item>
        <item>@string/hazard_rating_high</item>
        <item>@string/hazard_rating_all</item>
    </string-array>
    <string-array name="inequality_array">
        <item>@string/less_than</item>
        <item>@string/greater_than</item>
    </string-array>
    <string name="crit_vio_desc"><![CDATA[Total # of critical violations within the last year >=]]></string>
</resources>
