<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_show_list"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/show_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_white"
        android:orderInCategory="2"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
</menu>