<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recyclerItemParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardElevation="3dp"
        card_view:contentPadding="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/warningBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/hazardLowDark"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/hazardIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/desc_hazard_icon"
                        card_view:srcCompat="@drawable/icon_hazard_low"
                        tools:srcCompat="@drawable/icon_hazard_low" />

                    <TextView
                        android:id="@+id/textViewHazardLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/hazard_level_low"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/recyclerThumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc_recycler_thumbnail"
                card_view:srcCompat="@drawable/microwave" />

            <TextView
                android:id="@+id/recyclerRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recyclerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/default_address"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/recyclerInspectionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/default_date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recyclerIssuesCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/default_num_issues"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>